welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:8: error: not found: value nb
	nb match {
        ^Poucet:9: error: not found: value nb
		case n if nb>=3 => gauche()
                          ^Poucet:10: error: not found: value nb
		case n if nb<=2 => droite()
                          ^