welcome.lessons.welcome.loopdowhile.Poucet.scala.code
while (!sortieTrouvee()) {
	do {
		var nb = 0
		avance()
		if (estSurBiscuit()) {nb = nb + 1}
	} while (!croisement())
	nb match {
		case n if nb>=3 => gauche()
		case n if nb<=2 => droite()
	}
}
